--- a/src/app/core/transactions/transactions-list/transactions-list.component.html
+++ b/src/app/core/transactions/transactions-list/transactions-list.component.html
@@ -1,1 +1,45 @@
-<p>transactions works!</p>
+<div>
+    <p-table [value]="$transactions()" stripedRows
+             [tableStyle]="{'min-width': '50rem; max-height: 50%'}"
+             [paginator]="true"
+             [rows]="25"
+             [paginatorPosition]="'bottom'"
+             [showCurrentPageReport]="true"
+             [currentPageReportTemplate]="'{first} to {last} of {totalRecords}'"
+             [scrollable]="true"
+             scrollHeight="800px"
+             class="font-medium">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>ID</th>
+                <th>Amount</th>
+                <th>Date</th>
+                <th>Category</th>
+                <th>Details</th>
+                <th>Recipient name</th>
+                <th>Sender name</th>
+            </tr>
+        </ng-template>
+        <ng-template let-transaction pTemplate="body">
+            <tr class="text-sm font-medium leading-tight dark:text-surface-0 text-muted-color">
+                <td style="width: 3rem">#{{ transaction.id }}</td>
+                <td style="width: 4rem">
+                    <div *ngIf="transaction.transactionType == 'INCOME'">
+                        <div class="text-green-500 cell-right" style="text-align: right; width: 5rem">{{ transaction.amount | currency: ' ':'code':'2.2-2' }}</div>
+                    </div>
+                    <div *ngIf="transaction.transactionType == 'EXPENSE'">
+                        <div class="text-red-500 cell-right" style="text-align: right; width: 5rem">{{ transaction.amount | currency: ' ':'code':'2.2-2' }}</div>
+                    </div>
+                </td>
+                <td style="width: 7rem">{{ transaction.transactionDate }}</td>
+                <td>
+                    <p-tag styleclass="font-medium" data-p="success" class="font-medium p-component p-tag p-tag-success" data-pc-section="root" data-pc-name="t">
+                        <span class="p-tag-label" data-pc-section="label">{{ transaction.category }}</span></p-tag>
+                </td>
+                <td>{{ transaction.details }}</td>
+                <td>{{ transaction.recipientName }}</td>
+                <td>{{ transaction.senderName }}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
