--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 flex-1 md:flex-row flex-col">
-            <div class="flex-1 col-span-3 md:col-span-3 border-2 border-dashed border-surface-200 light:border-surface-700 rounded-2xl bg-surface-50 light:bg-surface-800">
+            <div class="flex-1 col-span-3 md:col-span-3 border border-surface-200 light:border-surface-700 rounded-2xl bg-surface-50 light:bg-surface-800">
                 <router-outlet></router-outlet>
             </div>
         </div>
