--- a/src/app/core/category/category-screen/category-screen.component.html
+++ b/src/app/core/category/category-screen/category-screen.component.html
@@ -1,18 +1,26 @@
 <div>
-    <div class="bg-surface-0 p-6 rounded-2xl flex flex-col gap-6">
-        <div class="border border-surface rounded-2xl p-6 min-h-80 light:bg-surface-950">
-            configuration list
-        </div>
-        <div class="border border-surface rounded-2xl p-6 light:bg-surface-950">
+    <div class="bg-surface-0 p-4 rounded-2xl flex flex-col gap-4">
+        <category-list [categoriesByBank]="$categoriesByBank()" [categories]="$categories()"></category-list>
+        <div class="border border-surface rounded-2xl p-4 light:bg-surface-950">
             add new configuration
         </div>
-        <div class="border border-surface rounded-2xl p-6 light:bg-surface-950 flex gap-6">
-            <div class="border border-surface rounded-2xl flex-1 p-6 w-full flex flex-col justify-center items-center">
-                <p-button pButton class="flex-1 py-2! px-3! font-medium! rounded-md!" severity="secondary" (onClick)="downloadConfiguration()">
+        <div class="border border-surface rounded-2xl p-4 light:bg-surface-950 flex gap-4">
+            <div class="border border-surface rounded-2xl flex-1 p-4 w-full flex flex-col justify-center items-center">
+                <p-button pButton class=" font-medium! rounded-md!" severity="secondary" (onClick)="downloadConfiguration()">
                     <span pButtonLabel>Download category configuration</span>
                 </p-button>
             </div>
-            <div class="border border-surface rounded-2xl flex-1 p-6">upload configuration</div>
+            <div class="border border-surface rounded-2xl flex-1 p-4">
+                <div class="bg-surface-0 light:bg-surface-950 md:px-8 lg:px-6">
+                    <div class="bg-surface-0 light:bg-surface-900 shadow-sm rounded-2xl p-4 max-w-4xl mx-auto flex flex-col gap-8">
+                        <span class="text-xl font-medium text-surface-900 light:text-surface-0 leading-tight">Upload category configuration</span>
+                        <div class="flex justify-between items-center">
+                            <p-fileupload #fu mode="basic" chooseLabel="Choose" chooseIcon="pi pi-upload" name="file[]" url="https://www.primefaces.org/cdn/api/upload.php" accept=".json" maxFileSize="1000000" (onUpload)="onUpload($event)"/>
+                            <p-button label="Upload" (onClick)="fu.upload()" severity="secondary"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
