--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,178 @@
     --p-fieldset-padding: 0 1rem 1rem 1rem !important;
 }
 
+
+body {
+    background: var(--surface-ground);
+}
+
+client-list p-confirmDialog .p-component-overlay {
+    background-color: rgba(0, 0, 0, 0.1) !important;
+}
+
+.card {
+    background: var(--surface-section);
+    padding: 1.5rem;
+    border-radius: 12px;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 24px 36px rgba(0, 0, 0, 0.04);
+}
+
+.p-accordion .p-accordion-header .p-accordion-header-link {
+    padding: 0.75rem !important;
+}
+
+.p-accordion .p-accordion-content {
+    padding: 0.5rem 2rem;
+}
+
+input {
+    max-width: 100% !important;
+    width: 100%;
+}
+
+.p-calendar {
+    width: 100%;
+}
+
+.p-dropdown {
+    min-width: 75%;
+    max-width: 100%;
+}
+
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item {
+    padding: 0.25rem 0.75rem
+}
+
+.p-inputtext {
+    padding: 0.25rem 0.75rem;
+}
+
+textarea {
+    min-height: 4rem !important;
+    width: 100%;
+}
+
+.p-button.p-button-icon-only.p-button-rounded {
+    width: 1.5rem;
+    height: 1.5rem;
+    font-weight: bold;
+    border: 0px;
+}
+
+.add-button button {
+    background: var(--green-600);
+    color: white;
+}
+
+.add-button:hover button {
+    background: var(--green-700);
+}
+
+.remove-button button {
+    background: var(--red-600);
+    color: white;
+}
+
+.remove-button:hover button {
+    background: var(--red-700);
+}
+
+.update-button button {
+    background: var(--blue-600);
+    color: white;
+}
+
+.update-button:hover button {
+    background: var(--blue-700);
+}
+
+.top-menu-button button {
+    padding: 0.4rem 0.7rem;
+}
+
+.p-dropdown, .p-inputtext {
+    border-color: #f1f0f0;
+}
+
+.p-datatable .p-datatable-tbody > tr > td {
+    padding: 0.75rem;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+    padding: 0.5rem 1rem;
+    border-width: 0 0 0 0;
+}
+
+.toggle-button .p-togglebutton {
+    padding: 0.4rem 0.7rem;
+}
+
+.p-togglebutton.p-button.p-highlight {
+    padding: 0.4rem 0.7rem;
+    background: #d1d5db;
+    border: 1px solid #d1d5db;
+}
+
+.p-tabview .p-tabview-panels {
+    padding: 1rem 0;
+}
+
+.p-toast {
+    min-height: 1rem !important;
+}
+
+.p-toast .p-toast-message .p-toast-message-content .p-toast-detail {
+    font-size: var(--toast-message-font-size);
+    white-space: pre-line;
+}
+
+.p-toast .p-toast-message .p-toast-message-content .p-icon:not(.p-toast-icon-close-icon) {
+    width: var(--toast-message-main-icon-width);
+    height: var(--toast-message-main-icon-height);
+}
+
+.p-toast {
+    width: var(--toast-message-width);
+}
+
+.p-toast .p-toast-message .p-toast-message-content {
+    padding: 0.9rem;
+}
+
+.p-toast .p-toast-message .p-toast-message-content .p-toast-message-text {
+    margin: var(--toast-message-maring);
+}
+
+.cell-right {
+    text-align: right !important;
+}
+
+.p-breadcrumb {
+    border: 0;
+    padding: 0;
+}
+
+.text-primary {
+    color: var(--gray-600) !important;
+}
+
+.top-label {
+    padding: 0.5rem 0;
+}
+
+.add-button {
+    background: #689f38 !important;
+    border-color: #3e6a15 !important;
+    color: white !important;
+    padding-block: 0.25rem !important;
+    padding-inline: 0.5rem !important;
+}
+
+.remove-button {
+    background: #a53030 !important;
+    border-color: #651010 !important;
+    color: white !important;
+    padding-block: 0.25rem !important;
+    padding-inline: 0.5rem !important;
+}
+
